kubernetes/apps/selfhosted/homer-k8s/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homer-k8s
spec:
  parentRefs:
    - namespace: kube-system
      name: gateway
      sectionName: https
  hostnames:
    - dashboard.apps.mrtb.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homer-k8s
          port: 8080
